# paper-tui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  main.rs  util.rs
src/app/: actions.rs  images.rs  render.rs  state.rs  worker.rs
