[package]
name = "paper-tui"
version = "1.0.0"
edition = "2024"
description = "A TUI wallpaper picker"
authors = ["Destin Ecarma"]
readme = "README.md"
homepage = "https://github.com/DestinEcarma/paper-tui"
repository = "https://github.com/DestinEcarma/paper-tui"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
ratatui = "0.30.0"
ratatui-image = { version = "10.0.6", default-features = false, features = ["image-defaults", "crossterm"] }
ratatui-textarea = "0.8.0"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
shell-escape = "0.1.5"
thiserror = "2.0.18"
toml = "1.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
